[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Themes/MenuWidgetTheme.tres" type="Theme" id=1]
[ext_resource path="res://Components/Menus/Menu/PauseMenu/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Components/Menus/Button/Button.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 242, 345 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -160.0
margin_right = 135.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_top = 20.0
margin_right = 270.0
margin_bottom = 41.0
text = "Pause"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 91.0
margin_top = 80.0
margin_right = 176.993
margin_bottom = 120.448
text = "Resume"

[node name="ExitMenuButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 79.0
margin_top = 137.0
margin_right = 193.993
margin_bottom = 177.448
text = "Exit to Menu"

[node name="ExitGameButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 79.0
margin_top = 194.0
margin_right = 193.993
margin_bottom = 234.448
text = "Exit Game"
